--- a/Advanced/TemplaterServer (Java)/src/main/resources/index.html
+++ b/Advanced/TemplaterServer (Java)/src/main/resources/index.html
@@ -51,10 +51,10 @@
                             <div>
                                 <p>
                                     <button id="beautify-json" type="button" class="btn btn-primary append-bottom">Beautify JSON</button>
-                                    <button type="button" class="btn btn-primary btn-switch append-bottom" id="toggle-pdf">PDF
-                                        conversion <span class="active">ON</span><span class="disabled" style="display:none">OFF</span>
+                                    <button type="button" class="btn btn-primary btn-switch append-bottom" id="toggle-pdf">
+                                        PDF conversion <span class="active" style="display:none">ON</span><span class="disabled">OFF</span>
                                     </button> <small class="text-muted">(toggle for docx only)</small>
-                                    <input type="hidden" name="toPdf" value="true" />
+                                    <input type="hidden" name="toPdf" value="false" />
                                     <input type="hidden" name="template" value="" />
                                 </p>
                             </div>
